# hippopotamus-streamer

./: AUTHORS  Makefile.am  ProjectHome.md  TODO  autogen.sh
data/: Makefile.am  Makefile.in  hippo-prefs.glade  hippopotamus.desktop.in.in
data/icons/: Makefile.in
src/: .cvsignore  Makefile.in  hippo.c  hippo.h  hippo_preferences.h  hippo_streamer.h
trunk/: ChangeLog  NEWS  README  configure.in
trunk/data/: .cvsignore  hippopotamus.schemas.in
trunk/data/icons/: Makefile.am
trunk/po/: POTFILES.in
trunk/src/: Makefile.am  hippo_preferences.c  hippo_streamer.c
